Fix regression: Overflow widget content pushed off screen on window resize

--- a/src/toolbar/widgets/OverflowWidget.css
+++ b/src/toolbar/widgets/OverflowWidget.css
@@ -19,9 +19,14 @@
 	left: 15px;
 	right: 15px;
 
-	/* Override the default transform and margin-left */
+	/*
+	 Override the default transform and margin-left.
+
+	 Setting translate to none prevents the dropdown from being shifted off the
+	 screen on window resize by dropdown-repositioning logic.
+	*/
 	margin-left: 0 !important;
-	transform: none !important;
+	translate: none !important;
 
 	padding: 4px;
 }
